# sfishx_utils

./: .gitignore  README.md  pyproject.toml  setup.py  test_utils.ipynb
examples/: test_utils.ipynb
examples/.ipynb_checkpoints/: compute_TG_spectra-checkpoint.ipynb  test-checkpoint.ipynb
sfishx_utils/: __init__.py  fish_utils.py
sfishx_utils/.ipynb_checkpoints/: fish_utils-checkpoint.py
