[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sfishx_utils"
version = "0.0.1"
authors = [
  { name="Angelo Ferrari", email="anferrar@bo.infn.it" },
]
description = "Scripts to plot the Fisher matrices obtained from SFX_CLASs"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "numpy>=1.19",
    "scipy",
    "matplotlib",
    "getdist",
    # Add any other required packages here
]

# [project.urls]
# Homepage = "https://github.com/pypa/sampleproject"
# Issues = "https://github.com/pypa/sampleproject/issues"