[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sfishx_utils"
version = "0.0.1"
authors = [
  { name="Angelo Ferrari", email="angeloferrari@pm.me" },
]
description = "Scripts to plot the Fisher matrices obtained from SFX_CLASS"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "numpy>=1.19",
    "scipy",
    "matplotlib",
    "getdist",
    "python-flint"
    # Add any other required packages here
]
